k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: domain-manager
  labels:
    name: domain-manager
    app: domain-manager
